<resources>
    <string name="app_name">JohnDeere</string>
    <string name="formRequired">Requerido</string>
    <string name="signUp_Username">Nombre de usuario</string>
    <string name="signUp_Email">Correo electrónico</string>
    <string name="signUp_password">Contraseña</string>
    <string name="old_password">Contraseña anterior</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="signUp_Companyname">Nombre de empresa</string>
    <string name="signUp_Companycode">Clave de empresa</string>
    <string name="signUp_string">Registrarse</string>
    <string name="guest_String">Entrar como invitado</string>
    <string name="search_hint">Ingresar palabra a buscar</string>
    <string name="logIn_string">Iniciar sesión</string>
    <string name="mainPage_bottomNav_string">Inicio</string>
    <string name="search_bottomNav_string">Search</string>
    <string name="quizzes_bottomNav_string">Quizzes</string>
    <string name="profile_bottomNav_string">Perfil</string>
    <string name="profile_personal_data_title">Datos Personales</string>
    <string name="profile_progress_title">Progreso</string>
    <string name="technicalLanguage_string">Lenguaje Técnico</string>
    <string name="generalLanguage_string">Lenguaje General</string>
    <string name="basic_string">Básico</string>
    <string name="intermediate_string">Intermedio</string>
    <string name="advanced_String">Avanzado</string>
    <string name="quizzesTextView_string">Quizzes</string>
    <string name="logOut_string">Cerrar sesión</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="back_string">Regresar</string>
    <string name="registeredUser_string">Usuario registrado</string>
    <string name="createAccount_string">Crear cuenta</string>
    <string name="search_string">Buscador</string>
    <string name="categories_string">Categoría x</string>
    <string name="categoriesLanguage_string">Lenguaje x</string>
    <string name="quizRoadDifficulty_string">Dificultad - x</string>
    <string name="words_string">Palabra x</string>
    <string name="quiz_choice">Choice</string>
    <string name="countLabel">Pregunta %d</string>
    <string name="finalScore">Score %d/%d</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="backToQuizRoad">Volver a la ruta de quizzes</string>
    <string name="application_logo">Application logo</string>
    <string name="progress_pie_chart">Progress pie chart</string>
    <string name="profile_picture_area">Profile picture area</string>
    <string name="reproducir">Reproducir</string>
    <string name="textview">TextView</string>
</resources>