<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuizRoad">

    <TextView
        android:id="@+id/quizRoad_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizRoadDifficulty_string"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:src="@drawable/quiz_road"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quizRoad_textView"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/level1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="115dp"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toStartOf="@+id/level2_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2_button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/level2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/level3_button"
        app:layout_constraintTop_toBottomOf="@+id/level3_button" />

    <Button
        android:id="@+id/level3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="115dp"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toStartOf="@+id/level4_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level4_button" />

    <Button
        android:id="@+id/level4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/level5_button"
        app:layout_constraintTop_toBottomOf="@+id/level5_button" />

    <Button
        android:id="@+id/level5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toStartOf="@+id/level4_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizRoad_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>