<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragments.Quizzes">

    <TextView
        android:id="@+id/quizzes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizzesTextView_string"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/basic_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/basic_string"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quizzes_textView" />

    <Button
        android:id="@+id/intermediate_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/intermediate_string"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toEndOf="@+id/basic_button"
        app:layout_constraintStart_toStartOf="@+id/basic_button"
        app:layout_constraintTop_toBottomOf="@+id/basic_button" />

    <Button
        android:id="@+id/advanced_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/advanced_String"
        android:background="@drawable/button_config"
        app:layout_constraintEnd_toEndOf="@+id/basic_button"
        app:layout_constraintStart_toStartOf="@+id/basic_button"
        app:layout_constraintTop_toBottomOf="@+id/intermediate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>