<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <Button
        android:id="@+id/logIn_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="375dp"
        android:layout_marginBottom="64dp"
        android:text="@string/logIn_string"
        app:layout_constraintBottom_toTopOf="@+id/signUp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/signUp_string"
        app:layout_constraintEnd_toEndOf="@+id/logIn_button"
        app:layout_constraintStart_toStartOf="@+id/logIn_button"
        app:layout_constraintTop_toBottomOf="@+id/logIn_button" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/guest_String"
        app:layout_constraintEnd_toEndOf="@+id/logIn_button"
        app:layout_constraintStart_toStartOf="@+id/logIn_button"
        app:layout_constraintTop_toBottomOf="@+id/signUp_button" />

</androidx.constraintlayout.widget.ConstraintLayout>